--- a/node/package.json
+++ b/node/package.json
@@ -7,8 +7,8 @@
     },
     "dependencies": {},
     "devDependencies": {
+        "@types/bun": "^1.1.14",
         "@types/node": "^22.10.5",
-        "bun-types": "^0.1.11",
         "dotenv": "^16.4.7",
         "prettier": "^3.4.2"
     }
