--- a/node/package.json
+++ b/node/package.json
@@ -10,6 +10,7 @@
         "@types/bun": "^1.1.14",
         "@types/node": "^22.10.5",
         "dotenv": "^16.4.7",
-        "prettier": "^3.4.2"
+        "prettier": "^3.4.2",
+        "vitest": "^2.1.8"
     }
 }
