--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -26,6 +26,8 @@ jobs:
 
       - name: Install dependencies
         run: uv sync
+        working-directory: python/
 
       - name: Run tests
         run: pytest test/
+        working-directory: python/
