--- a/node/package.json
+++ b/node/package.json
@@ -3,7 +3,9 @@
     "scripts": {
         "dev": "bun examples/realtime-events.ts",
         "format": "prettier --config .prettierrc.json --write \"**/*.{ts,md}\"",
-        "type-check": "tsc"
+        "type-check": "tsc",
+        "clean": "rm -rf dist",
+        "pack": "bun clean && bun build src/index.ts --outdir dist"
     },
     "dependencies": {},
     "devDependencies": {
