--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -42,9 +42,7 @@ jobs:
         run: |
           VERSION=$(uvx --from=toml-cli toml get --toml-path=pyproject.toml project.version)
           echo "Current version: $VERSION"
-          # increase the patch version
-          uvx --from=semver-cli semver inc patch $VERSION > version.txt
-          NEW_VERSION=$(cat version.txt)
+          NEW_VERSION=$(pysemver bump patch $VERSION)
           echo "New version: $NEW_VERSION"
         working-directory: python/
 
