--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -16,6 +16,7 @@ packages = ["kadoa_sdk"]
 [dependency-groups]
 dev = [
     "bump2version>=1.0.1",
+    "pysemver>=0.5.0",
     "pytest>=8.3.4",
     "semver>=3.0.2",
     "twine>=6.0.1",
