--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -1,14 +1,11 @@
 name: sdk-node
 
-env:
-  CODE_PATH: node/**
-
 on:
   push:
     branches:
       - main
     paths:
-      - ${{ env.CODE_PATH }}
+      - node/**
   workflow_dispatch:
 
 
