--- a/node/package.json
+++ b/node/package.json
@@ -1,12 +1,19 @@
 {
-    "name": "kadoa-node",
+    "name": "@kadoa/node",
     "version": "0.0.1",
+    "source": "src/index.ts",
+    "main": "dist/index.js",
+    "module": "dist/index.js",
+    "types": "dist/index.d.ts",
+    "files": [
+        "dist/"
+    ],
     "scripts": {
         "dev": "bun examples/realtime-events.ts",
         "format": "prettier --config .prettierrc.json --write \"**/*.{ts,md}\"",
         "type-check": "tsc",
         "clean": "rm -rf dist",
-        "pack": "bun clean && bun build src/index.ts --outdir dist"
+        "compile": "bun clean && bun build src/index.ts --outdir dist --minify"
     },
     "dependencies": {},
     "devDependencies": {
