--- a/node/tsconfig.json
+++ b/node/tsconfig.json
@@ -1,6 +1,7 @@
 {
     "compilerOptions": {
         "baseUrl": ".",
+        "declaration": true,
         "paths": {
             "*": ["src/*", "test/*"]
         }
