--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -28,23 +28,7 @@ jobs:
         run: uv sync --dev
         working-directory: python/
 
-      - name: Create .pypirc
-        run: |
-          echo "[pypi]" > ~/.pypirc
-          echo "  username = __token__" >> ~/.pypirc
-          echo "  password = ${{ secrets.PYPI_TOKEN }}" >> ~/.pypirc
-        shell: bash
+      - name: Run tests
+        run: make test
+        working-directory: python/
 
-      # WIP: Uncomment the following steps to bump the version and publish the package to PyPI
-      # - name: Bump version
-      #   run: |
-      #     VERSION=$(uvx --from=toml-cli toml get --toml-path=pyproject.toml project.version)
-      #     echo "Current version: $VERSION"
-      #     NEW_VERSION=$(uv run pysemver bump patch $VERSION)
-      #     echo "New version: $NEW_VERSION"
-      #   working-directory: python/
-
-      # - name: Publish package to PyPI
-      #   run: |
-      #     make publish
-      #   working-directory: python/
