--- a/node/tsconfig.json
+++ b/node/tsconfig.json
@@ -1,9 +1,14 @@
 {
     "compilerOptions": {
-        "baseUrl": ".",
-        "declaration": true,
-        "paths": {
-            "*": ["src/*", "test/*"]
-        }
-    }
-}
+      "target": "ES2020",
+      "module": "ESNext",
+      "declaration": true,
+      "declarationDir": "dist/types",
+      "emitDeclarationOnly": true,
+      "strict": true,
+      "esModuleInterop": true,
+      "skipLibCheck": true
+    },
+    "include": ["src/**/*.ts"],
+    "exclude": ["node_modules", "dist"]
+  }
