--- a/node/package.json
+++ b/node/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@kadoa/node",
-    "version": "0.0.5",
+    "version": "0.0.6",
     "source": "src/index.ts",
     "main": "dist/index.js",
     "module": "dist/index.js",
@@ -13,11 +13,14 @@
         "format": "prettier --config .prettierrc.json --write \"**/*.{ts,md}\"",
         "type-check": "tsc",
         "clean": "rm -rf dist",
-        "compile": "bun clean && bun tsup src/index.ts"
+        "compile": "bun clean && tsup"
     },
-    "dependencies": {},
+    "dependencies": {
+        "ws": "^8.18.0"
+    },
     "devDependencies": {
         "@types/node": "^22.10.5",
+        "@types/ws": "^8.5.13",
         "bun-plugin-dts": "^0.3.0",
         "dotenv": "^16.4.7",
         "prettier": "^3.4.2",
